<resources>
    <string name="app_name">eLocations</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="pref_name" translatable="false">AppPreferences</string>

    <string-array name="categories">
        <item>Aeroporto</item>
        <item>Loja de departamento</item>
        <item>Universidade</item>
        <item>Empresa</item>
        <item>Escola</item>
        <item>Lanchonete</item>
        <item>Restaurante</item>
        <item>Ponto de ônibus</item>
        <item>Posto de gasolina</item>
        <item>Shopping center</item>
        <item>Supermercado</item>
        <item>Outro</item>
    </string-array>

    <string name="more">Mais</string>
    <string name="action_watch">Assistir</string>
    <string name="action_download">Baixar</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_settings">Configurações</string>
    <string name="action_home">Início</string>
    <string name="action_add_new">Adicionar novo</string>
    <string name="action_save">Salvar</string>
    <string name="action_delete">Apagar</string>

    <string name="label_name">Nome</string>
    <string name="label_description">Descrição</string>
    <string name="label_category">Categoria</string>
    <string name="label_pictures">Imagens</string>
    <string name="action_cancel">Cancelar</string>
    <string name="label_number">Telefone</string>
    <string name="action_add_new_business">Adicionar novo negócio</string>
    <string name="action_edit_business">Editar negócio</string>
    <string name="action_add">Adicionar</string>
    <string name="action_edit">Editar</string>
    <string name="action_show_guides">Mostrar guias</string>

    <string name="text_display_business_description" translatable="false">%s\n\nTelefone: %s\n\nCategoria: %s</string>
    <string name="action_new">Novo</string>

</resources>